--- a/css-display-layout/inspector-stylesheet.css
+++ b/css-display-layout/inspector-stylesheet.css
@@ -15,9 +15,12 @@ img {
 
 header {
     display: block;
-    line-height: 50px;
+    line-height: 80px;
     background-color: rgb(44, 44, 44);
     margin-bottom: 1px;
     color: rgb(250,250,250);
     text-align: center;
+    font-size: 200%;
+    font-family: sans-serif;
+    font-weight: bolder;
 }
