--- a/css-display-layout/inspector-stylesheet.css
+++ b/css-display-layout/inspector-stylesheet.css
@@ -24,3 +24,15 @@ header {
     font-family: sans-serif;
     font-weight: bolder;
 }
+
+h1 {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+}
+
+span {
+    background-color: rgb(200,200,200);
+    color: white;
+    margin-right: 1px;
+}
