--- a/css-display-layout/inspector-stylesheet.css
+++ b/css-display-layout/inspector-stylesheet.css
@@ -51,8 +51,10 @@ h2 {
   text-align: center;
   padding-left: 10px;
   padding-right: 10px;
+  display: inline-block;
 }
 
 .align {
   width: 100%;
+  display: inline-block;
 }
